--- a/applications/registration/templates/base.html
+++ b/applications/registration/templates/base.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agent approval</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/output.css' %}" type="text/css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{% static 'css/output.css' %}">
+   
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   
     <style>
@@ -25,6 +26,14 @@
         <!-- Your page content will go here -->
         {% endblock %}
     </div>
-</body>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/country.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'js/contact.js' %}"></script>
+    <script src="{% static 'js/credit.js' %}"></script>
+    <script>
+        var searchApplicationStatusUrl = "{% url 'search_application_status' %}";
+    </script>
+    <script src="{% static 'js/popup.js' %}"></script>
 
 </html>
