--- a/applications/registration/templates/registration/business_detail.html
+++ b/applications/registration/templates/registration/business_detail.html
@@ -1,175 +1,131 @@
+{% extends 'base.html' %}
 {%load static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Details</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 0.8rem; /* Default font size is typically 1rem, so we're scaling down */
-        }
-       
-    </style>
-</head>
-<body class="bg-white">
-  <div class="container mx-auto px-4 py-8">
+{% block content %}
+<div class="container mx-auto px-4 py-8">
     <img src="{% static 'images/logo.png' %}" alt="Logo" class="mx-auto mt-4" style="max-width: 100px;">
-      <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-6">
-          <form action="" method="post" enctype="multipart/form-data">
-              {% csrf_token %}
-              <fieldset class="mb-6 p-4 border-l-4 border-green-500">
-                  <legend class="text-xl font-semibold mb-4 text-green-800">Business Details</legend>
+    <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg p-6">
+        <form action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="mb-6 p-4 border-l-4 border-green-500">
+                <legend class="text-xl font-semibold mb-4 text-green-800">Business Details</legend>
 
-                  <!-- Business Name -->
-                  <div class="mb-4">
-                      <label for="id_business_name" class="block text-sm font-medium text-gray-700">Business Name:</label>
-                      <input type="text" name="business_name" id="id_business_name" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter business name" value="{{ form.business_name.value|default_if_none:'' }}">
-                      {% if form.business_name.errors %}
-                          <p class="text-red-500 text-xs">{{ form.business_name.errors }}</p>
-                      {% endif %}
-                  </div>
+                <!-- Business Name -->
+                <div class="mb-4">
+                    <label for="id_business_name" class="block text-sm font-medium text-gray-700">Business Name:</label>
+                    <input type="text" name="business_name" id="id_business_name" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter business name" value="{{ form.business_name.value|default_if_none:'' }}">
+                    {% if form.business_name.errors %}
+                        <p class="text-red-500 text-xs">{{ form.business_name.errors }}</p>
+                    {% endif %}
+                </div>
 
-                  <!-- Registration Number -->
-<div class="mb-4">
-    <label for="id_registration_number" class="block text-sm font-medium text-gray-700">Registration Number:</label>
-    <input type="text" name="registration_number" id="id_registration_number" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter registration number" value="{{ form.registration_number.value|default_if_none:'' }}">
-    {% if form.registration_number.errors %}
-        <p class="text-red-500 text-xs">{{ form.registration_number.errors.0 }}</p>
-    {% endif %}
-</div>
+                <!-- Registration Number -->
+                <div class="mb-4">
+                    <label for="id_registration_number" class="block text-sm font-medium text-gray-700">Registration Number:</label>
+                    <input type="text" name="registration_number" id="id_registration_number" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter registration number" value="{{ form.registration_number.value|default_if_none:'' }}">
+                    {% if form.registration_number.errors %}
+                        <p class="text-red-500 text-xs">{{ form.registration_number.errors.0 }}</p>
+                    {% endif %}
+                </div>
 
-<!-- KRA PIN -->
-<div class="mb-4">
-    <label for="id_kra_pin" class="block text-sm font-medium text-gray-700">KRA PIN:</label>
-    <input type="text" name="kra_pin" id="id_kra_pin" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter KRA PIN" value="{{ form.kra_pin.value|default_if_none:'' }}">
-    {% if form.kra_pin.errors %}
-        <p class="text-red-500 text-xs">{{ form.kra_pin.errors.0 }}</p>
-    {% endif %}
-</div>
+                <!-- KRA PIN -->
+                <div class="mb-4">
+                    <label for="id_kra_pin" class="block text-sm font-medium text-gray-700">KRA PIN:</label>
+                    <input type="text" name="kra_pin" id="id_kra_pin" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter KRA PIN" value="{{ form.kra_pin.value|default_if_none:'' }}">
+                    {% if form.kra_pin.errors %}
+                        <p class="text-red-500 text-xs">{{ form.kra_pin.errors.0 }}</p>
+                    {% endif %}
+                </div>
 
-                  <!-- Business Address -->
-                  <div class="mb-4">
-                      <label for="id_business_address" class="block text-sm font-medium text-gray-700">Business Address:</label>
-                      <input type="text" name="business_address" id="id_business_address" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter business address" value="{{ form.business_address.value|default_if_none:'' }}">
-                      {% if form.business_address.errors %}
-                          <p class="text-red-500 text-xs">{{ form.business_address.errors }}</p>
-                      {% endif %}
-                  </div>
+                <!-- Business Address -->
+                <div class="mb-4">
+                    <label for="id_business_address" class="block text-sm font-medium text-gray-700">Business Address:</label>
+                    <input type="text" name="business_address" id="id_business_address" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter business address" value="{{ form.business_address.value|default_if_none:'' }}">
+                    {% if form.business_address.errors %}
+                        <p class="text-red-500 text-xs">{{ form.business_address.errors }}</p>
+                    {% endif %}
+                </div>
 
-                 <!-- Country -->
-<div class="mb-4">
-    <label for="id_country" class="block text-sm font-medium text-gray-700">Country:</label>
-    {{ form.country }}
-    {% if form.country.errors %}
-        <p class="text-red-500 text-xs">{{ form.country.errors }}</p>
-    {% endif %}
-</div>
+                <!-- Country and City -->
+                <div class="mb-4 flex space-x-4">
+                    <div class="w-1/2">
+                        <label for="id_country" class="block text-sm font-medium text-gray-700">Country:</label>
+                        {{ form.country }}
+                        {% if form.country.errors %}
+                            <p class="text-red-500 text-xs">{{ form.country.errors }}</p>
+                        {% endif %}
+                    </div>
+                    <div class="w-1/2">
+                        <label for="id_city" class="block text-sm font-medium text-gray-700">City:</label>
+                        {{ form.city }}
+                        {% if form.city.errors %}
+                            <p class="text-red-500 text-xs">{{ form.city.errors }}</p>
+                        {% endif %}
+                    </div>
+                </div>
 
-<!-- City -->
-<div class="mb-4">
-    <label for="id_city" class="block text-sm font-medium text-gray-700">City:</label>
-    {{ form.city }}
-    {% if form.city.errors %}
-        <p class="text-red-500 text-xs">{{ form.city.errors }}</p>
-    {% endif %}
-</div>
+                <div class="mb-4 flex space-x-4">
+                    <div class="w-1/3">
+                        <label for="id_phone_code" class="block text-sm font-medium text-gray-700">Phone Code:</label>
+                        {{ form.phone_code }}
+                        {% if form.phone_code.errors %}
+                            <p class="text-red-500 text-xs">{{ form.phone_code.errors }}</p>
+                        {% endif %}
+                    </div>
+                    <div class="w-2/3">
+                        <label for="id_phone_number" class="block text-sm font-medium text-gray-700">Phone Number:</label>
+                        <input type="tel" name="phone_number" id="id_phone_number" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter phone number" value="{{ form.phone_number.value|default_if_none:'' }}">
+                        {% if form.phone_number.errors %}
+                            <p class="text-red-500 text-xs">{{ form.phone_number.errors.0 }}</p>
+                        {% endif %}
+                    </div>
+                </div>
 
-
-            <!-- Phone Code -->
-<div class="mb-4">
-    <label for="id_phone_code" class="block text-sm font-medium text-gray-700">Phone Code:</label>
-    {{ form.phone_code }}
-    {% if form.phone_code.errors %}
-        <p class="text-red-500 text-xs">{{ form.phone_code.errors }}</p>
-    {% endif %}
-</div>
-
-<!-- Phone Number -->
-<div class="mb-4">
-    <label for="id_phone_number" class="block text-sm font-medium text-gray-700">Phone Number:</label>
-    <div class="flex">
-        <input type="tel" name="phone_number" id="id_phone_number" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter phone number" value="{{ form.phone_number.value|default_if_none:'' }}">
-    </div>
-    {% if form.phone_number.errors %}
-        <p class="text-red-500 text-xs">{{ form.phone_number.errors.0 }}</p>
-    {% endif %}
-</div>
-
-                  <!-- Email Address -->
-                  <div class="mb-4">
-                      <label for="id_email_address" class="block text-sm font-medium text-gray-700">Email Address:</label>
-                      <input type="email" name="email_address" id="id_email_address" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter email address" value="{{ form.email_address.value|default_if_none:'' }}">
-                      {% if form.email_address.errors %}
-                          <p class="text-red-500 text-xs">{{ form.email_address.errors }}</p>
-                      {% endif %}
-                  </div>
+                <!-- Email Address -->
+                <div class="mb-4">
+                    <label for="id_email_address" class="block text-sm font-medium text-gray-700">Email Address:</label>
+                    <input type="email" name="email_address" id="id_email_address" class="form-input w-full border-2 border-green-200 focus:border-green-400 focus:ring-0 py-2 px-3 rounded-lg" placeholder="Enter email address" value="{{ form.email_address.value|default_if_none:'' }}">
+                    {% if form.email_address.errors %}
+                        <p class="text-red-500 text-xs">{{ form.email_address.errors }}</p>
+                    {% endif %}
+                </div>
 
                 <!-- Registration Certificate -->
-<div class="mb-4">
-    <label for="id_registration_certificate" class="block text-sm font-medium text-gray-700">Registration Certificate:</label>
-    <input type="file" name="registration_certificate" id="id_registration_certificate" class="form-input w-full text-sm text-grey-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-2 file:border-green-200 file:text-green-700 hover:file:border-green-400">
-    <p class="text-gray-500 text-xs mt-1">Only PDF uploads are allowed</p>
-    {% if form.registration_certificate.errors %}
-        <p class="text-red-500 text-xs">{{ form.registration_certificate.errors.0 }}</p>
-    {% endif %}
+                <div class="mb-4">
+                    <label for="id_registration_certificate" class="block text-sm font-medium text-gray-700">Registration Certificate:</label>
+                    <input type="file" name="registration_certificate" id="id_registration_certificate" class="form-input w-full text-sm text-grey-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-2 file:border-green-200 file:text-green-700 hover:file:border-green-400">
+                    <p class="text-gray-500 text-xs mt-1">Only PDF uploads are allowed</p>
+                    {% if form.registration_certificate.errors %}
+                        <p class="text-red-500 text-xs">{{ form.registration_certificate.errors.0 }}</p>
+                    {% endif %}
+                </div>
+
+                <!-- Trading License -->
+                <div class="mb-4">
+                    <label for="id_trading_license" class="block text-sm font-medium text-gray-700">Trading License:</label>
+                    <input type="file" name="trading_license" id="id_trading_license" class="form-input w-full text-sm text-grey-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-2 file:border-green-200 file:text-green-700 hover:file:border-green-400">
+                    <p class="text-gray-500 text-xs mt-1">Only PDF uploads are allowed</p>
+                    {% if form.trading_license.errors %}
+                        <p class="text-red-500 text-xs">{{ form.trading_license.errors.0 }}</p>
+                    {% endif %}
+                </div>
+
+                <!-- Tax Compliance Certificate -->
+                <div class="mb-4">
+                    <label for="id_tax_compliance_certificate" class="block text-sm font-medium text-gray-700">Tax Compliance Certificate:</label>
+                    <input type="file" name="tax_compliance_certificate" id="id_tax_compliance_certificate" class="form-input w-full text-sm text-grey-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-2 file:border-green-200 file:text-green-700 hover:file:border-green-400">
+                    <p class="text-gray-500 text-xs mt-1">Only PDF uploads are allowed</p>
+                    {% if form.tax_compliance_certificate.errors %}
+                        <p class="text-red-500 text-xs">{{ form.tax_compliance_certificate.errors.0 }}</p>
+                    {% endif %}
+                </div>
+
+                <div class="flex justify-end mt-6">
+                    <button type="submit" class="py-2 px-6 bg-green-600 text-white text-sm font-semibold rounded-lg hover:bg-green-700">Submit Business Details</button>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
 
-<!-- Trading License -->
-<div class="mb-4">
-    <label for="id_trading_license" class="block text-sm font-medium text-gray-700">Trading License:</label>
-    <input type="file" name="trading_license" id="id_trading_license" class="form-input w-full text-sm text-grey-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-2 file:border-green-200 file:text-green-700 hover:file:border-green-400">
-    <p class="text-gray-500 text-xs mt-1">Only PDF uploads are allowed</p>
-    {% if form.trading_license.errors %}
-        <p class="text-red-500 text-xs">{{ form.trading_license.errors.0 }}</p>
-    {% endif %}
-</div>
 
-<!-- Tax Compliance Certificate -->
-<div class="mb-4">
-    <label for="id_tax_compliance_certificate" class="block text-sm font-medium text-gray-700">Tax Compliance Certificate:</label>
-    <input type="file" name="tax_compliance_certificate" id="id_tax_compliance_certificate" class="form-input w-full text-sm text-grey-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-2 file:border-green-200 file:text-green-700 hover:file:border-green-400">
-    <p class="text-gray-500 text-xs mt-1">Only PDF uploads are allowed</p>
-    {% if form.tax_compliance_certificate.errors %}
-        <p class="text-red-500 text-xs">{{ form.tax_compliance_certificate.errors.0 }}</p>
-    {% endif %}
-</div>
-
-                  <div class="flex justify-end mt-6">
-                      <button type="submit" class="py-2 px-6 bg-green-600 text-white text-sm font-semibold rounded-lg hover:bg-green-700">Submit Business Details</button>
-                  </div>
-              </fieldset>
-          </form>
-      </div>
-  </div>
-   <script>
-    document.getElementById('id_country').addEventListener('change', function() {
-        var countrySelect = this;
-        var citySelect = document.getElementById('id_city');
-        var selectedCountry = countrySelect.value;
-
-        // Clear existing city options
-        citySelect.innerHTML = '<option value="">Select a city</option>';
-
-        if (selectedCountry) {
-            // Make an AJAX request to get the cities for the selected country
-            fetch(`/get-cities/${selectedCountry}/`)
-                .then(response => response.json())
-                .then(cities => {
-                    // Populate the city options
-                    cities.forEach(city => {
-                        var option = document.createElement('option');
-                        option.value = city;
-                        option.textContent = city;
-                        citySelect.appendChild(option);
-                    });
-                });
-        }
-    });
-</script> 
-</body>
-</html>
-
+{% endblock %}
